<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text3" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text4" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text5" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="114dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text6" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="135dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text7" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="214dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText9"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:ems="10"
                android:layout_marginTop="16dp"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText13"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText14"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText15"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPassword" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:text="" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:text="" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:text="CheckBox" />

        </LinearLayout>


        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="302dp"
            android:layout_height="330dp"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="4dp" />
</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>